--- a/index.html
+++ b/index.html
@@ -1,40 +1,151 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Сложно сосредоточиться</title>
-  </head>
-  <body class="page">
-    <header class="header decorated-zone">
-      <nav class="header__theme-menu">
-        <ul class="header__theme-menu-list">
-          <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_light"
-            >
-              День
-            </button>
-          </li>
-          <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-              disabled
-            >
-              Авто
-            </button>
-          </li>
-          <li class="header__theme-menu-item">
-            <button
-              class="header__theme-menu-button header__theme-menu-button_type_dark"
-            >
-              Неон
-            </button>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <script src="./scripts/script.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="color-scheme" content="dark light">
+  <link rel="stylesheet" type="text/css" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/globals.css">
+  <link rel="stylesheet" href="./styles/variables.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/light.css">
+  <link rel="stylesheet" href="./styles/dark.css">
+  <link rel="icon" href="./images/favicon.ico" sizes="any">
+  <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+  <title>Сложно сосредоточиться</title>
+</head>
+
+<body class="page">
+  <header class="header decorated-zone">
+    <nav class="header__theme-menu">
+      <ul class="header__theme-menu-list">
+        <li class="header__theme-menu-item">
+          <button class="header__theme-menu-button header__theme-menu-button_type_light">
+            День
+          </button>
+        </li>
+        <li class="header__theme-menu-item">
+          <button class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+            disabled>
+            Авто
+          </button>
+        </li>
+        <li class="header__theme-menu-item">
+          <button class="header__theme-menu-button header__theme-menu-button_type_dark">
+            Неон
+          </button>
+        </li>
+      </ul>
+    </nav>
+    <h1 class="main__title">no focus</h1>
+    <div class="description title-decor">
+      <p>Что делать, когда не можешь делать ничего</p>
+      <p>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+    </div>
+    <section class="rec-decor">
+      <section>
+  </header>
+  <main class="main__content">
+    <article class="article">
+        <h2 class="article__title">Почему сосредоточиться так сложно</h2>
+      <div>
+        <h3 class="title title-decor">Многозадачность</h3>
+        <p class="text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же
+          легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том,
+          что её просто не существует. Исследователи <a class="link"
+            href="https://dana.org/article/multicosts-of-multitasking/"
+            rel="ссылка на исследования фнглийская версия">выяснили</a>, что мозгу тяжело концентрироваться даже на двух
+          делах
+          одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и
+          адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+        <h3 class="title title-decor">Дофамин</h3>
+        <p class="text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности
+          сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе
+          вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для
+          мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие.
+          Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
+      </div>
+    </article>
+    <article class="row__transform article">
+      <div class="article__title__column__trasform">
+        <h2 class="article__title article__title__column">Что снижает концентрацию внимания?</h2>
+      </div>
+      <div class="table">
+        <h3 class="title title-decor">Многозадачность</h3>
+        <p class="text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко
+          меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности.
+          Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и
+          она
+          может не выдержать, если не давать ей отдохнуть.</p>
+        <h3 class="title title-decor">Еда</h3>
+        <p class="text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и
+          помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем
+          на
+          «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и
+          сонливость.
+          И хотим ещё больше быстрых углеводов.</p>
+        <h3 class="title title-decor">Гаджеты</h3>
+        <p class="text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на
+          компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи
+          на
+          другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20
+          минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно,
+          чтобы
+          вернуться к работе.</p>
+      </div>
+    </article>
+    <article class="article">
+        <h2 class="article__title text__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+      <div>
+        <h3 class="title title-decor break">5 простых (на самом деле не очень) советов</h3>
+        <h3 class="boldness title title-decor">Представьте небо и облака</h3>
+        <p class="text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто
+          именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно
+          закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+          ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в
+          настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
+        <h3 class="boldness title title-decor">Включите музыку</h3>
+        <p class="text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями,
+          которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
+          включить плейлист в «белым шумом» или нейромузыкой.</p>
+        <h3 class="boldness title title-decor">Прогуляйтесь</h3>
+        <p class="text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link"
+            href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+            rel="ссылка на статью, английский язык">показал</a>, что созерцание
+          природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается.
+          Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и
+          он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+        <h3 class="boldness title title-decor">Хорошо ешьте</h3>
+        <p class="text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют
+          резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+          чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
+        <h3 class="boldness title title-decor">Читайте</h3>
+        <p class="text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в
+          соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на
+          несколько часов и круто тренирует направленное внимание.</p>
+      </div>
+    </article>
+    <section class="pictures__section">
+      <div class="pictures__container">
+        <h3 class="pictures__title title-decor">А можно в картинках?</h3>
+        <img src="./images/sunset.png" loading="lazy" class="picture sunset"
+          alt="картинка с восходом солнца и летящими вдали чайками">
+        <img src="./images/ice-cream.png" loading="lazy" class="picture ice"
+          alt="картинка мороженного со смещными животными внутри">
+        <img src="./images/tape.png" loading="lazy" class="picture tape" alt="картинка аудио-кассеты">
+        <img src="./images/books.png" loading="lazy" class="picture books" alt="картинка стопки книг">
+        <img src="./images/street.png" loading="lazy" class="picture street" alt="картинка улицы">
+      </div>
+    </section>
+  </main>
+  <footer class="footer decorated-zone">
+    <h1 class="footer__title">focus</h1>
+  </footer>
+  <script src="./scripts/script.js"></script>
+</body>
+
 </html>
