--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section>
   </header>
   <main class="main__content">
-    <article class="article">
+    <section class="article">
         <h2 class="article__title">Почему сосредоточиться так сложно</h2>
       <div>
         <h3 class="title title-decor">Многозадачность</h3>
@@ -67,18 +67,21 @@
           мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие.
           Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
       </div>
-    </article>
-    <article class="row__transform article">
-      <div class="article__title__column__trasform">
+    </section>
+    <section class="what_question article">
+      <div class="article__title__column__title">
         <h2 class="article__title article__title__column">Что снижает концентрацию внимания?</h2>
       </div>
       <div class="table">
+        <article>
         <h3 class="title title-decor">Многозадачность</h3>
         <p class="text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко
           меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности.
           Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и
           она
           может не выдержать, если не давать ей отдохнуть.</p>
+        </article>
+        <article>
         <h3 class="title title-decor">Еда</h3>
         <p class="text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и
           помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем
@@ -86,6 +89,8 @@
           «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и
           сонливость.
           И хотим ещё больше быстрых углеводов.</p>
+        </article>
+        <article>
         <h3 class="title title-decor">Гаджеты</h3>
         <p class="text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на
           компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи
@@ -94,41 +99,42 @@
           минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно,
           чтобы
           вернуться к работе.</p>
+        </article>
       </div>
-    </article>
-    <article class="article">
+    </section>
+    <section class="article">
         <h2 class="article__title text__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
-      <div>
+      <article>
         <h3 class="title title-decor break">5 простых (на самом деле не очень) советов</h3>
-        <h3 class="boldness title title-decor">Представьте небо и облака</h3>
+        <h4 class="boldness title title-decor">Представьте небо и облака</h4>
         <p class="text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто
           именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно
           закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было —
           ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в
           настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
-        <h3 class="boldness title title-decor">Включите музыку</h3>
+        <h4 class="boldness title title-decor">Включите музыку</h4>
         <p class="text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями,
           которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
           включить плейлист в «белым шумом» или нейромузыкой.</p>
-        <h3 class="boldness title title-decor">Прогуляйтесь</h3>
+        <h4 class="boldness title title-decor">Прогуляйтесь</h4>
         <p class="text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link"
             href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
             rel="ссылка на статью, английский язык">показал</a>, что созерцание
           природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается.
           Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и
           он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
-        <h3 class="boldness title title-decor">Хорошо ешьте</h3>
+        <h4 class="boldness title title-decor">Хорошо ешьте</h4>
         <p class="text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют
           резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
           чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
-        <h3 class="boldness title title-decor">Читайте</h3>
+        <h4 class="boldness title title-decor">Читайте</h4>
         <p class="text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в
           соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на
           несколько часов и круто тренирует направленное внимание.</p>
-      </div>
-    </article>
+      </article>
+    </section>
     <section class="pictures__section">
       <div class="pictures__container">
         <h3 class="pictures__title title-decor">А можно в картинках?</h3>
@@ -143,7 +149,7 @@
     </section>
   </main>
   <footer class="footer decorated-zone">
-    <h1 class="footer__title">focus</h1>
+    <h2 class="footer__title">focus</h2>
   </footer>
   <script src="./scripts/script.js"></script>
 </body>
