--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <p>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
     </div>
     <section class="rec-decor">
-      <section>
+    </section>
   </header>
   <main class="main__content">
     <section class="article">
@@ -55,7 +55,7 @@
         <p class="text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же
           легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том,
           что её просто не существует. Исследователи <a class="link"
-            href="https://dana.org/article/multicosts-of-multitasking/"
+            href="https://dana.org/article/multicosts-of-multitasking/" target="_blank"
             rel="ссылка на исследования фнглийская версия">выяснили</a>, что мозгу тяжело концентрироваться даже на двух
           делах
           одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и
@@ -73,26 +73,26 @@
         <h2 class="article__title article__title__column">Что снижает концентрацию внимания?</h2>
       </div>
       <div class="table">
-        <article>
+        <article class="table__article">
         <h3 class="title title-decor">Многозадачность</h3>
-        <p class="text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко
+        <p class="table__text text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко
           меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности.
           Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и
           она
           может не выдержать, если не давать ей отдохнуть.</p>
         </article>
-        <article>
+        <article class="table__article">
         <h3 class="title title-decor">Еда</h3>
-        <p class="text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и
+        <p class="table__text text">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и
           помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в результате попадаем
           на
           «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы чувствуем усталость и
           сонливость.
           И хотим ещё больше быстрых углеводов.</p>
         </article>
-        <article>
+        <article class="table__article">
         <h3 class="title title-decor">Гаджеты</h3>
-        <p class="text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на
+        <p class="table__text text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на
           компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи
           на
           другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20
@@ -100,6 +100,7 @@
           чтобы
           вернуться к работе.</p>
         </article>
+        
       </div>
     </section>
     <section class="article">
@@ -120,7 +121,7 @@
           включить плейлист в «белым шумом» или нейромузыкой.</p>
         <h4 class="boldness title title-decor">Прогуляйтесь</h4>
         <p class="text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="link"
-            href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+            href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank"
             rel="ссылка на статью, английский язык">показал</a>, что созерцание
           природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается.
           Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и
